--- a/app/assets/stylesheets/greetings/dash-your-day.sass
+++ b/app/assets/stylesheets/greetings/dash-your-day.sass
@@ -175,7 +175,7 @@
       background-image: url("/src/images/icons/icon-instagram-black.png")
     .icon-line
       background-image: url("/src/images/icons/icon-line-black.png")
-  .btn-daydash
+  .btn-thekanko
     padding: 10px 5px
     font-size: 20px
     border-radius: 25px
