--- a/app/assets/stylesheets/greetings/template.sass
+++ b/app/assets/stylesheets/greetings/template.sass
@@ -11,17 +11,17 @@ a img
   background-color: #6ab344
   color: #fff
 
-.daydash-search-box .mdl-textfield__input
+.thekanko-search-box .mdl-textfield__input
   color: rgba(0, 0, 0, 0.87)
 
-.daydash-header .mdl-menu__container
+.thekanko-header .mdl-menu__container
   z-index: 50
   margin: 0 !important
 
 .mdl-textfield--expandable
   width: auto
 
-.daydash-fab
+.thekanko-fab
   position: absolute
   right: 20%
   bottom: -26px
@@ -29,14 +29,14 @@ a img
   background: #64ffda !important
   color: black !important
 
-.daydash-mobile-title
+.thekanko-mobile-title
   display: none !important
 
-.daydash-logo-image
+.thekanko-logo-image
   height: 28px
   width: 140px
 
-.daydash-header
+.thekanko-header
   overflow: visible
   background-color: white
   .material-icons
@@ -49,7 +49,7 @@ a img
     font-weight: 700
     font-size: 14px
 
-.daydash-navigation-container
+.thekanko-navigation-container
   /* Simple hack to make the overflow happen to the left instead... */
   direction: rtl
   -webkit-order: 1
@@ -58,7 +58,7 @@ a img
   width: 500px
   transition: opacity 0.2s cubic-bezier(0.4, 0, 0.2, 1), width 0.2s cubic-bezier(0.4, 0, 0.2, 1)
 
-.daydash-navigation
+.thekanko-navigation
   /* ... and now make sure the content is actually LTR */
   direction: ltr
   -webkit-justify-content: flex-end
@@ -66,11 +66,11 @@ a img
   justify-content: flex-end
   width: 800px
 
-.daydash-search-box.is-focused + .daydash-navigation-container
+.thekanko-search-box.is-focused + .thekanko-navigation-container
   opacity: 0
   width: 100px
 
-.daydash-navigation .mdl-navigation__link
+.thekanko-navigation .mdl-navigation__link
   display: inline-block
   height: 60px
   line-height: 68px
@@ -79,27 +79,27 @@ a img
   &:hover
     border-bottom: 4px solid #8bc34a
 
-.daydash-search-box
+.thekanko-search-box
   -webkit-order: 2
   -ms-flex-order: 2
   order: 2
   margin-left: 16px
   margin-right: 16px
 
-.daydash-more-button
+.thekanko-more-button
   -webkit-order: 3
   -ms-flex-order: 3
   order: 3
 
-.daydash-drawer
+.thekanko-drawer
   border-right: none
 
-.daydash-drawer-separator
+.thekanko-drawer-separator
   height: 1px
   background-color: #dcdcdc
   margin: 8px 0
 
-.daydash-drawer
+.thekanko-drawer
   .mdl-navigation__link.mdl-navigation__link
     font-size: 14px
     color: #757575
@@ -109,11 +109,11 @@ a img
     position: relative
     background: #6ab344
     height: 160px
-  .daydash-logo-image
+  .thekanko-logo-image
     position: absolute
     bottom: 16px
 
-.daydash-be-together-section
+.thekanko-be-together-section
   position: relative
   height: 800px
   width: auto
@@ -127,15 +127,15 @@ a img
   color: #767777
   font-weight: 500
 
-.daydash-slogan
+.thekanko-slogan
   font-size: 60px
   padding-top: 160px
 
-.daydash-sub-slogan
+.thekanko-sub-slogan
   font-size: 21px
   padding-top: 24px
 
-.daydash-create-character
+.thekanko-create-character
   font-size: 21px
   padding-top: 400px
   a
@@ -143,85 +143,85 @@ a img
     color: #767777
     font-weight: 300
 
-.daydash-screen-section
+.thekanko-screen-section
   position: relative
   padding-top: 60px
   padding-bottom: 80px
 
-.daydash-screens
+.thekanko-screens
   text-align: right
   width: 100%
   white-space: nowrap
   overflow-x: auto
 
-.daydash-screen
+.thekanko-screen
   text-align: center
-  .daydash-link
+  .thekanko-link
     margin-top: 16px
     display: block
     z-index: 2
 
-.daydash-image-link
+.thekanko-image-link
   text-decoration: none
 
-.daydash-wear
+.thekanko-wear
   display: inline-block
   width: 160px
   margin-right: 32px
-  .daydash-screen-image
+  .thekanko-screen-image
     width: 40%
     z-index: 1
 
-.daydash-phone
+.thekanko-phone
   display: inline-block
   width: 64px
   margin-right: 48px
-  .daydash-screen-image
+  .thekanko-screen-image
     width: 100%
     z-index: 1
 
-.daydash-tablet
+.thekanko-tablet
   display: inline-block
   width: 110px
   margin-right: 64px
-  .daydash-screen-image
+  .thekanko-screen-image
     width: 100%
     z-index: 1
-  .daydash-link
+  .thekanko-link
     display: block
     z-index: 2
 
-.daydash-tv
+.thekanko-tv
   display: inline-block
   width: 300px
   margin-right: 80px
-  .daydash-screen-image
+  .thekanko-screen-image
     width: 100%
     z-index: 1
 
-.daydash-auto
+.thekanko-auto
   display: inline-block
   width: 300px
   overflow: hidden
-  .daydash-screen-image
+  .thekanko-screen-image
     display: block
     height: 300px
     z-index: 1
 
-.daydash-wear-section
+.thekanko-wear-section
   position: relative
   background: url('images/wear.png') center top no-repeat
   background-size: cover
   height: 800px
 
-.daydash-wear-band
+.thekanko-wear-band
   position: absolute
   bottom: 0
   width: 100%
   text-align: center
   background-color: #37474f
 
-.daydash-wear-band-text
+.thekanko-wear-band-text
   max-width: 800px
   margin-left: 25%
   padding: 24px
@@ -230,7 +230,7 @@ a img
   p
     padding-top: 8px
 
-.daydash-link
+.thekanko-link
   text-decoration: none
   color: #8bc34a !important
   &:hover
@@ -240,7 +240,7 @@ a img
     top: -1px
     vertical-align: middle
 
-.daydash-alt-link
+.thekanko-alt-link
   text-decoration: none
   color: #64ffda !important
   font-size: 16px
@@ -250,10 +250,10 @@ a img
     position: relative
     top: 6px
 
-.daydash-customized-section
+.thekanko-customized-section
   text-align: center
 
-.daydash-customized-section-text
+.thekanko-customized-section-text
   max-width: 500px
   margin-left: auto
   margin-right: auto
@@ -261,21 +261,21 @@ a img
   p
     padding-top: 16px
 
-.daydash-customized-section-image
+.thekanko-customized-section-image
   background: url('images/devices.jpg') center top no-repeat
   background-size: cover
   height: 400px
 
-.daydash-more-section
+.thekanko-more-section
   padding: 80px 0
   max-width: 1044px
   margin-left: auto
   margin-right: auto
-  .daydash-section-title
+  .thekanko-section-title
     margin-left: 12px
     padding-bottom: 24px
 
-.daydash-card-container
+.thekanko-card-container
   .mdl-card__media
     overflow: hidden
     background: transparent
@@ -298,7 +298,7 @@ a img
       border-top: none
       font-size: 16px
 
-.daydash-footer
+.thekanko-footer
   background-color: #fafafa
   position: relative
   a:hover
@@ -313,16 +313,16 @@ a img
     position: relative
     top: 6px
 
-.daydash-link-menu:hover
+.thekanko-link-menu:hover
   cursor: pointer
 
 /**** Mobile layout *** */
 @media (max-width: 900px)
-  .daydash-navigation-container
+  .thekanko-navigation-container
     display: none
-  .daydash-title
+  .thekanko-title
     display: none !important
-  .daydash-mobile-title
+  .thekanko-mobile-title
     display: block !important
     position: absolute
     left: calc(50% - 70px)
@@ -331,34 +331,34 @@ a img
   /* WebViews in iOS 9 break the "~" operator, and WebViews in OS X 10.10 break
    * consecutive "+" operators in some cases. Therefore, we need to use both
    * here to cover all the bases.
-  .daydash.daydash-search-box.is-focused ~ .daydash-mobile-title, .daydash-search-box.is-focused + .daydash-navigation-container + .daydash-mobile-title
+  .thekanko.thekanko-search-box.is-focused ~ .thekanko-mobile-title, .thekanko-search-box.is-focused + .thekanko-navigation-container + .thekanko-mobile-title
     opacity: 0
-  .daydash-more-button
+  .thekanko-more-button
     display: none
-  .daydash-search-box
+  .thekanko-search-box
     &.is-focused
       width: calc(100% - 48px)
     .mdl-textfield__expandable-holder
       width: 100%
-  .daydash-be-together-section
+  .thekanko-be-together-section
     height: 350px
-  .daydash-slogan
+  .thekanko-slogan
     font-size: 26px
     margin: 0 16px
     padding-top: 24px
-  .daydash-sub-slogan
+  .thekanko-sub-slogan
     font-size: 16px
     margin: 0 16px
     padding-top: 8px
-  .daydash-create-character
+  .thekanko-create-character
     padding-top: 200px
     font-size: 16px
     img
       height: 12px
-  .daydash-fab
+  .thekanko-fab
     display: none
-  .daydash-wear-band-text
+  .thekanko-wear-band-text
     margin-left: 0
     padding: 16px
-  .daydash-footer .mdl-mega-footer--bottom-section
+  .thekanko-footer .mdl-mega-footer--bottom-section
     display: none
