--- a/app/assets/stylesheets/pages/layout.scss
+++ b/app/assets/stylesheets/pages/layout.scss
@@ -22,7 +22,7 @@
   }
   .navbar-right{
     > li{
-      .btn-daydash-green-2 {
+      .btn-thekanko-green-2 {
         background: #19D4D6;
         color: white;
         border: 0px;
