--- a/app/assets/stylesheets/pages/modules/_color.scss
+++ b/app/assets/stylesheets/pages/modules/_color.scss
@@ -1,13 +1,13 @@
 
-.color-daydash-green{
+.color-thekanko-green{
   color: #19D4D6
 }
 
-.color-daydash-green-2{
+.color-thekanko-green-2{
   color: #17A41D
 }
 
-.color-daydash-red {
+.color-thekanko-red {
   color: #EB585B
 }
 
