--- a/app/views/client/events/index.html.erb
+++ b/app/views/client/events/index.html.erb
@@ -23,7 +23,7 @@
   <div class="container">
     <div class="row">
       <div class="col-xs-12 text-center">
-        <h2>สงสัยใช่มั้ยว่า Daydash คืออะไร?</h2>
+        <h2>สงสัยใช่มั้ยว่า TheKanko คืออะไร?</h2>
         <p class="underline-title"></p>
       </div>
     </div>
@@ -33,21 +33,21 @@
           <i class="nc-icon-title nc-icon-outline media-1_ticket-75"></i>
         </p>
         <p>เว็บสำหรับคนชอบทำกิจกรรม</p>
-        <p>Daydash คือเว็บรวบกิจกรรมและอีเว้นท์แนวไลฟ์สไตล์ให้คุณสามารถทำการจองและเข้าร่วมได้ทันทีในไม่กี่คลิก</p>
+        <p>TheKanko คือเว็บรวบกิจกรรมและอีเว้นท์แนวไลฟ์สไตล์ให้คุณสามารถทำการจองและเข้าร่วมได้ทันทีในไม่กี่คลิก</p>
       </div>
       <div class="col-xs-12 col-md-4 text-center">
         <p class="p-icon">
           <i class="nc-icon-title nc-icon-outline travel_sea-mask"></i>
         </p>
         <p>หลากหลายกิจกรรมให้เลือกทำ</p>
-        <p>หลากหลายกิจกรรมบน Daydash ไม่ว่าจะเป็นงานดนตรี ดีเจ มันส์ๆ เวิร์คช็อปศิลปะ ไปจนถึงกิจกรรมเวิร์คเอาท์ออกกำลัง ฯลฯ</p>
+        <p>หลากหลายกิจกรรมบน TheKanko ไม่ว่าจะเป็นงานดนตรี ดีเจ มันส์ๆ เวิร์คช็อปศิลปะ ไปจนถึงกิจกรรมเวิร์คเอาท์ออกกำลัง ฯลฯ</p>
       </div>
       <div class="col-xs-12 col-md-4 text-center">
         <p class="p-icon">
           <i class="nc-icon-title nc-icon-outline education_award-55"></i>
         </p>
         <p>เป็นตัวแทนถูกต้อง 100%</p>
-        <p>Daydash ได้รับการยอมรับให้เป็นตัวแทนจากผู้จัดโดยตรง ทุกกิจกรรม อีเว้นท์ ที่อยู่บน Daydash แปลว่าคุณสามารถทำการซื้อและเข้าร่วมได้แน่นอน</p>
+        <p>TheKanko ได้รับการยอมรับให้เป็นตัวแทนจากผู้จัดโดยตรง ทุกกิจกรรม อีเว้นท์ ที่อยู่บน TheKanko แปลว่าคุณสามารถทำการซื้อและเข้าร่วมได้แน่นอน</p>
       </div>
     </div>
   </div>
@@ -138,14 +138,14 @@
       <div class="col-xs-12 col-md-6 text-center block-center comment-details">
         <div class="comment-slides">
           <div>
-            <p>“เป็นครั้งแรกที่ลองเข้าร่วมกิจกรรมเวิร์คช็อปแนวศิลปะ คุณครูใจดีมาก แม้ว่าจะไม่มีพื้นฐานมาก่อน ก็สามารถวาดตามได้ง่ายๆ เป็นกิจกรรมดีมากๆ จะเข้าร่วมอีกแน่ๆ ขอบคุณ Daydash ที่แนะนำกิจกรรมใหม่ๆ มาให้ลองครับ” </p>
+            <p>“เป็นครั้งแรกที่ลองเข้าร่วมกิจกรรมเวิร์คช็อปแนวศิลปะ คุณครูใจดีมาก แม้ว่าจะไม่มีพื้นฐานมาก่อน ก็สามารถวาดตามได้ง่ายๆ เป็นกิจกรรมดีมากๆ จะเข้าร่วมอีกแน่ๆ ขอบคุณ TheKanko ที่แนะนำกิจกรรมใหม่ๆ มาให้ลองครับ” </p>
             <p>
               <img src="<%= "#{App.domain}/src/images/profile/missing-profile.png" %>" width="44" height="44" style="display: inline-block; border-radius: 50px;" />
               คุณ Arnon Hongklay
             </p>
           </div>
           <!-- <div>
-            <p>“เป็นครั้งแรกที่ลองเข้าร่วมกิจกรรมเวิร์คช็อปแนวศิลปะ คุณครูใจดีมาก แม้ว่าจะไม่มีพื้นฐานมาก่อน ก็สามารถวาดตามได้ง่ายๆ เป็นกิจกรรมดีมากๆ จะเข้าร่วมอีกแน่ๆ ขอบคุณ Daydash ที่แนะนำกิจกรรมใหม่ๆ มาให้ลองครับ” </p>
+            <p>“เป็นครั้งแรกที่ลองเข้าร่วมกิจกรรมเวิร์คช็อปแนวศิลปะ คุณครูใจดีมาก แม้ว่าจะไม่มีพื้นฐานมาก่อน ก็สามารถวาดตามได้ง่ายๆ เป็นกิจกรรมดีมากๆ จะเข้าร่วมอีกแน่ๆ ขอบคุณ TheKanko ที่แนะนำกิจกรรมใหม่ๆ มาให้ลองครับ” </p>
             <p>
               <img src="<%= "#{App.domain}/src/images/profile/missing-profile.png" %>" width="44" height="44" style="display: inline-block; border-radius: 50px;" />
               คุณ Boy Pakorn
