--- a/app/views/errors/not_found.html.erb
+++ b/app/views/errors/not_found.html.erb
@@ -8,7 +8,7 @@
   p {
     font-size: 24px;
   }
-  a.btn-daydash {
+  a.btn-thekanko {
     margin: 20px 0px;
   }
 </style>
@@ -18,7 +18,7 @@
       <h1 style="font-size: 100px; font-weight: 500">ERROR 404</h1>
       <p>Thing you are looking or is not found but..</p>
       <h2>"It OK To Be Lost in the Right Direction"</h2>
-      <a href="/" class="btn btn-daydash btn-daydash-green-2 btn-lg">ค้นหากิจกรรมและอีเว้นท์ที่น่าสนใจ</a>
+      <a href="/" class="btn btn-thekanko btn-thekanko-green-2 btn-lg">ค้นหากิจกรรมและอีเว้นท์ที่น่าสนใจ</a>
     </div>
   </div>
 </div>
