--- a/app/views/greetings/campaign.html.erb
+++ b/app/views/greetings/campaign.html.erb
@@ -15,7 +15,7 @@
                 </h1>
 
                 <p class="section-description">
-                  เพราะเราเชื่อว่า การได้ทดลองทำกิจกรรมใหม่ๆ เป็นการเปิดโลกของเราให้กว้างขึ้น Daydash จึงเลือก 3 กิจกรรมเด็ด มาให้คุณได้ทดลองกันฟรีๆ ด้วย 3 ขั้นตอนง่ายๆ เพียงเลือกกิจกรรมที่อยากทำ กรอกข้อมูล และแชร์ให้เพื่อน เท่านี้คุณก็มีสิทธิ์ลุ้นเป็นผู้โชคดี ได้ทดลองทำกิจกรรมสนุกๆ กับ Daydash ฟรี! วันนี้ - 7 กันยายน นี้!
+                  เพราะเราเชื่อว่า การได้ทดลองทำกิจกรรมใหม่ๆ เป็นการเปิดโลกของเราให้กว้างขึ้น TheKanko จึงเลือก 3 กิจกรรมเด็ด มาให้คุณได้ทดลองกันฟรีๆ ด้วย 3 ขั้นตอนง่ายๆ เพียงเลือกกิจกรรมที่อยากทำ กรอกข้อมูล และแชร์ให้เพื่อน เท่านี้คุณก็มีสิทธิ์ลุ้นเป็นผู้โชคดี ได้ทดลองทำกิจกรรมสนุกๆ กับ TheKanko ฟรี! วันนี้ - 7 กันยายน นี้!
                 </p>
               </div>
             </div>
@@ -31,9 +31,9 @@
                     <h4>เวิร์คช็อปทำลูกชุบกับ Olive</h4>
                     <div>1 รางวัล (วันที่ 24 กันยา 2PM-4PM)</div>
                     <% if @selected_campaign == 'olive' %>
-                    <a class="btn btn-block btn-daydash btn-green vrlps-trigger" href="#">I want this!</a>
+                    <a class="btn btn-block btn-thekanko btn-green vrlps-trigger" href="#">I want this!</a>
                     <% else %>
-                    <a class="btn btn-block btn-daydash btn-green" href="/campaign/dash-your-day?campaign=olive">I want this!</a>
+                    <a class="btn btn-block btn-thekanko btn-green" href="/campaign/dash-your-day?campaign=olive">I want this!</a>
                     <% end %>
                   </div>
                 </div>
@@ -45,9 +45,9 @@
                     <h4>Rock Climbing 1 Day Pass</h4>
                     <div>2 รางวัล รางวัลละ 2 ท่าน</div>
                     <% if @selected_campaign == 'rock-domain' %>
-                    <a class="btn btn-block btn-daydash btn-green vrlps-trigger" href="#">I want this!</a>
+                    <a class="btn btn-block btn-thekanko btn-green vrlps-trigger" href="#">I want this!</a>
                     <% else %>
-                    <a class="btn btn-block btn-daydash btn-green" href="/campaign/dash-your-day?campaign=rock-domain">I want this!</a>
+                    <a class="btn btn-block btn-thekanko btn-green" href="/campaign/dash-your-day?campaign=rock-domain">I want this!</a>
                     <% end %>
                   </div>
                 </div>
@@ -59,9 +59,9 @@
                     <h4>Lazgam Laser Games</h4>
                     <div>10 รางวัล รางวัลละ 2 ท่าน (1 game)</div>
                     <% if @selected_campaign == 'lazgam' %>
-                    <a class="btn btn-block btn-daydash btn-green vrlps-trigger" href="#">I want this!</a>
+                    <a class="btn btn-block btn-thekanko btn-green vrlps-trigger" href="#">I want this!</a>
                     <% else %>
-                    <a class="btn btn-block btn-daydash btn-green" href="/campaign/dash-your-day?campaign=lazgam">I want this!</a>
+                    <a class="btn btn-block btn-thekanko btn-green" href="/campaign/dash-your-day?campaign=lazgam">I want this!</a>
                     <% end %>
                   </div>
                 </div>
@@ -87,9 +87,9 @@
         </div>
 
         <ul class="list-inline" id="social-list">
-          <li><a target="_blank" href="https://www.facebook.com/daydashapp/"><i class="icon icon-facebook"></i></a></li>
-          <li><a target="_blank" href="https://www.instagram.com/daydashapp"><i class="icon icon-instagram"></i></a></li>
-          <li><a target="_blank" href="http://line.me/ti/p/%40daydash"><i class="icon icon-line"></i></a></li>
+          <li><a target="_blank" href="https://www.facebook.com/thekankoapp/"><i class="icon icon-facebook"></i></a></li>
+          <li><a target="_blank" href="https://www.instagram.com/thekankoapp"><i class="icon icon-instagram"></i></a></li>
+          <li><a target="_blank" href="http://line.me/ti/p/%40thekanko"><i class="icon icon-line"></i></a></li>
         </ul>
       </div>
     </div>
