--- a/app/views/greetings/campaign_terms.html.erb
+++ b/app/views/greetings/campaign_terms.html.erb
@@ -16,11 +16,11 @@
         </div>
         <div class="section" id="term-section">
           <div class="container">
-            <h2>เงื่อนไขการร่วมกิจกรรม “Dash Your Day” ได้เวลาเติมประสบการณ์ใหม่ๆ ให้ชีวิต โดย Daydash.co</h2>
+            <h2>เงื่อนไขการร่วมกิจกรรม “Dash Your Day” ได้เวลาเติมประสบการณ์ใหม่ๆ ให้ชีวิต โดย TheKanko.co</h2>
             <ul>
               <li>เปิดให้ร่วมสนุกตั้งแต่วันที่ 19 - 7 กันยายน 2016 </li>
               <li>หมดเวลาเข้าร่วมสนุกเวลา 24.00 น. ของวันที่ 7 กันยายน 2016 ตามเวลาในประเทศไทย</li>
-              <li>ประกาศผลรางวัลในวันที่ 5 กันยายน 2016 ทาง <a href="https://www.facebook.com/daydashapp/" target="_blank">Daydash Facebook Page</a></li>
+              <li>ประกาศผลรางวัลในวันที่ 5 กันยายน 2016 ทาง <a href="https://www.facebook.com/thekankoapp/" target="_blank">TheKanko Facebook Page</a></li>
             </ul>
 
             <h2>รายละเอียดของรางวัล</h2>
@@ -50,16 +50,16 @@
             <ul>
               <li>ของรางวัลไม่สามารถเปลี่ยนเป็นเงินสดหรือรางวัลอื่นได้</li>
               <li>ผู้โชคดีมีสิทธิ์ได้รับรางวัลที่มีมูลค่าสูงสุดเพียงรางวัลเดียว</li>
-              <li>ทีมงาน Daydash จะติดต่อผู้โชคดีเพื่อส่งของรางวัลและรายละเอียดทางอีเมล</li>
-              <li>คำตัดสินของทีมงาน Daydash ถือเป็นที่สิ้นสุด</li>
-              <li>ทีมงาน Daydash ขอสงวนสิทธิ์ในการเปลี่ยนแปลงเงื่อนไขและของรางวัลโดยไม่ต้องแจ้งให้ทราบล่วงหน้า</li>
+              <li>ทีมงาน TheKanko จะติดต่อผู้โชคดีเพื่อส่งของรางวัลและรายละเอียดทางอีเมล</li>
+              <li>คำตัดสินของทีมงาน TheKanko ถือเป็นที่สิ้นสุด</li>
+              <li>ทีมงาน TheKanko ขอสงวนสิทธิ์ในการเปลี่ยนแปลงเงื่อนไขและของรางวัลโดยไม่ต้องแจ้งให้ทราบล่วงหน้า</li>
             </ul>
           </div>
         </div>
         <ul class="list-inline" id="social-list">
-          <li><a target="_blank" href="https://www.facebook.com/daydashapp/"><i class="icon icon-facebook"></i></a></li>
-          <li><a target="_blank" href="https://www.instagram.com/daydashapp"><i class="icon icon-instagram"></i></a></li>
-          <li><a target="_blank" href="http://line.me/ti/p/%40daydash"><i class="icon icon-line"></i></a></li>
+          <li><a target="_blank" href="https://www.facebook.com/thekankoapp/"><i class="icon icon-facebook"></i></a></li>
+          <li><a target="_blank" href="https://www.instagram.com/thekankoapp"><i class="icon icon-instagram"></i></a></li>
+          <li><a target="_blank" href="http://line.me/ti/p/%40thekanko"><i class="icon icon-line"></i></a></li>
         </ul>
       </div>
     </div>
