--- a/app/views/greetings/policy.html.erb
+++ b/app/views/greetings/policy.html.erb
@@ -2,14 +2,14 @@
   <div class="row">
     <div class="col-sm-12">
       <% unless mobile_device? %>
-        <h1>นโยบายความเป็นส่วนตัวของ Daydash</h1>
+        <h1>นโยบายความเป็นส่วนตัวของ TheKanko</h1>
       <% else %>
-        <p>นโยบายความเป็นส่วนตัวของ Daydash</p>
+        <p>นโยบายความเป็นส่วนตัวของ TheKanko</p>
       <% end %>
-      <p>แอพพลิเคชั่น Daydash (ทั้งทางเว็บไซต์ และผ่านทาง mobile) ตระหนักถึงความปลอดภัยของข้อมูลส่วนบุคคลและจะรักษาข้อมูลที่ได้รับจากท่านไว้อย่างเป็นความลับและ ปลอดภัยโดยใช้นโยบายความเป็นส่วนตัวเพื่อป้องกันความเสียหายที่อาจเกิดขึ้นกับท่าน บริษัทจึงมีนโยบายความเป็นส่วนตัวเพื่อป้องกันความปลอดภัยของข้อมูลส่วนตัวของท่านดังนี้</p>
+      <p>แอพพลิเคชั่น TheKanko (ทั้งทางเว็บไซต์ และผ่านทาง mobile) ตระหนักถึงความปลอดภัยของข้อมูลส่วนบุคคลและจะรักษาข้อมูลที่ได้รับจากท่านไว้อย่างเป็นความลับและ ปลอดภัยโดยใช้นโยบายความเป็นส่วนตัวเพื่อป้องกันความเสียหายที่อาจเกิดขึ้นกับท่าน บริษัทจึงมีนโยบายความเป็นส่วนตัวเพื่อป้องกันความปลอดภัยของข้อมูลส่วนตัวของท่านดังนี้</p>
 
       <h2>การเก็บข้อมูลและการใช้ข้อมูลส่วนบุคคล</h2>
-      <p>เมื่อท่านใช้บริการผ่านทางแอพพลิเคชั่น Daydash และลงทะเบียนบัญชีผู้ใช้ ท่านจะต้องให้ข้อมูลส่วนตัวกับทางแอพพลิเคชั่น เช่น ชื่อ ที่อยู่ อีเมล์ เบอร์โทรศัพท์ ข้อมูลบัญชีธนาคาร ข้อมูลบัตรเครดิต รวมถึงข้อมูลลักษณะการใช้งานแอพพลิเคชั่น เป็นต้น บริษัทตกลงจะเก็บข้อมูลเหล่านี้ไว้เป็นความลับ และบริษัทอาจใช้ข้อมูลดังกล่าวเพื่อ
+      <p>เมื่อท่านใช้บริการผ่านทางแอพพลิเคชั่น TheKanko และลงทะเบียนบัญชีผู้ใช้ ท่านจะต้องให้ข้อมูลส่วนตัวกับทางแอพพลิเคชั่น เช่น ชื่อ ที่อยู่ อีเมล์ เบอร์โทรศัพท์ ข้อมูลบัญชีธนาคาร ข้อมูลบัตรเครดิต รวมถึงข้อมูลลักษณะการใช้งานแอพพลิเคชั่น เป็นต้น บริษัทตกลงจะเก็บข้อมูลเหล่านี้ไว้เป็นความลับ และบริษัทอาจใช้ข้อมูลดังกล่าวเพื่อ
       </p>
 
       <ul>
