--- a/app/views/mailers/user/welcome.html.erb
+++ b/app/views/mailers/user/welcome.html.erb
@@ -19,7 +19,7 @@
                   <td valign="top" class="mcnTextContent" style="padding-top:0; padding-right:18px; padding-bottom:9px; padding-left:18px;">
                     <h1 style="background: black; color: white; padding: 5px; margin-bottom: 3px; display: inline-block;">Welcome, <%= "#{@user.first_name}" %>!</h1>
                     <h1 style="margin: 0px; padding: 0px 5px;">You’ve made a <span style="display: inline-block; background: #DFFFFB; padding: 5px;">great choice!</span></h1>
-                    <p style="font-weight: 200; margin-top: 30px;">ขอบคุณสำหรับการลงทะเบียนกับเรา คุณสามารถได้พบกับกิจกรรมและอีเว้นท์ที่คุณสนใจ และทำการซื้อบัตรเพื่อเข้าร่วมได้ทันทีในไม่กี่คลิกใน Daydash</p>
+                    <p style="font-weight: 200; margin-top: 30px;">ขอบคุณสำหรับการลงทะเบียนกับเรา คุณสามารถได้พบกับกิจกรรมและอีเว้นท์ที่คุณสนใจ และทำการซื้อบัตรเพื่อเข้าร่วมได้ทันทีในไม่กี่คลิกใน TheKanko</p>
                   </td>
                 </tr>
               </tbody>
@@ -188,7 +188,7 @@
                               <tbody>
                                 <tr>
                                   <td align="center" valign="middle" class="mcnButtonContent" style="font-family: Arial; font-size: 16px; padding: 15px;">
-                                    <a class="mcnButton " title="Discover Now" href="http://daydash.co/" target="_blank" style="font-weight: bold;letter-spacing: normal;line-height: 100%;text-align: center;text-decoration: none;color: #FFFFFF;">Discover Now</a>
+                                    <a class="mcnButton " title="Discover Now" href="http://thekanko.co/" target="_blank" style="font-weight: bold;letter-spacing: normal;line-height: 100%;text-align: center;text-decoration: none;color: #FFFFFF;">Discover Now</a>
                                   </td>
                                 </tr>
                               </tbody>
@@ -199,8 +199,8 @@
                       </tbody>
                     </table>
                     <p style="font-weight: 200; padding-top: 15px;">
-                      หวังว่าคุณจะได้ลองทำสิ่งใหม่ๆ และได้พบประสบการณ์ดีๆ จากการใช้ Daydash 😁<br />
-                      — ทีมงาน Daydash.co
+                      หวังว่าคุณจะได้ลองทำสิ่งใหม่ๆ และได้พบประสบการณ์ดีๆ จากการใช้ TheKanko 😁<br />
+                      — ทีมงาน TheKanko.co
                     </p>
 
                   </td>
