--- a/app/views/organizer/parts/_event_form.html.erb
+++ b/app/views/organizer/parts/_event_form.html.erb
@@ -266,8 +266,8 @@
               </div>
           </div>
           <div class="form-footer">
-            <button class="btn btn-daydash btn-daydash-green-1">Submit for review</button>
-            <!-- <button class="btn btn-daydash btn-daydash-green-1" value="published">Submit</button>
+            <button class="btn btn-thekanko btn-thekanko-green-1">Submit for review</button>
+            <!-- <button class="btn btn-thekanko btn-thekanko-green-1" value="published">Submit</button>
             or
             <button class="btn btn-default" value="unpublish">Save as Draft</button> -->
           </div>
