--- a/app/views/partials/_top_nav.html.erb
+++ b/app/views/partials/_top_nav.html.erb
@@ -96,7 +96,7 @@
                 <a href="#">Explore</a>
               </li>
               <li>
-                <a href="#">Daydash คืออะไร</a>
+                <a href="#">TheKanko คืออะไร</a>
               </li>
             </ul>
           <% end %>
@@ -106,13 +106,13 @@
               <a href="#">Explore</a>
             </li>
             <li>
-              <a href="#">Daydash คืออะไร</a>
+              <a href="#">TheKanko คืออะไร</a>
             </li>
           </ul>
           <ul class="nav navbar-nav navbar-right">
             <li>
               <a id="menu-login"
-                 class="btn btn-daydash btn-daydash-green-2"
+                 class="btn btn-thekanko btn-thekanko-green-2"
                  data-toggle="modal"
                  data-target="#login-modal"
                  href="#login-modal">
