--- a/app/views/user/passwords/edit.html.erb
+++ b/app/views/user/passwords/edit.html.erb
@@ -25,7 +25,7 @@
 
           <div class="form-group text-right">
             <div class="col-xs-12">
-              <button class="btn btn-daydash btn-daydash-green-2 btn-block" type="submit">Change my password</button>
+              <button class="btn btn-thekanko btn-thekanko-green-2 btn-block" type="submit">Change my password</button>
             </div>
           </div>
         <% end %>
