--- a/app/views/greetings/faq.html.erb
+++ b/app/views/greetings/faq.html.erb
@@ -3,8 +3,8 @@
     <div class="col-sm-12">
       <h1>FAQ</h1>
 
-      <h2>Daydash คืออะไร?</h2>
-      <p>Daydash (อ่านว่า เดย์แดช) คือบริการที่คัดเลือกกิจกรรมและอีเว้นท์ดีๆ สนุกๆ ที่ตรงกับไลฟ์สไตล์ของคนเมือง โดยสามารถซื้อบัตรและชำระเงินเพื่อเข้าอีเว้นท์หรือกิจกรรมได้โดยตรงผ่านทางแอพพลิเคชั่นและเว็บไซต์ได้ง่ายๆ ในไม่กี่ขั้นตอน
+      <h2>TheKanko คืออะไร?</h2>
+      <p>TheKanko (อ่านว่า เดย์แดช) คือบริการที่คัดเลือกกิจกรรมและอีเว้นท์ดีๆ สนุกๆ ที่ตรงกับไลฟ์สไตล์ของคนเมือง โดยสามารถซื้อบัตรและชำระเงินเพื่อเข้าอีเว้นท์หรือกิจกรรมได้โดยตรงผ่านทางแอพพลิเคชั่นและเว็บไซต์ได้ง่ายๆ ในไม่กี่ขั้นตอน
       </p>
     </div>
   </div>
