--- a/app/views/greetings/terms.html.erb
+++ b/app/views/greetings/terms.html.erb
@@ -4,16 +4,16 @@
       <% unless mobile_device? %>
         <h1>Terms of Service</h1>
       <% end %>
-      <h2>ข้อตกลงการใช้บริการแอพพลิเคชั่น Daydash</h2>
-      <p>ข้อกำหนดและเงื่อนไขทั้งหมดในเอกสารฉบับนี้ใช้บังคับสำหรับการที่ท่านเข้าใช้แอพพลิเคชั่นทางโทรศัพท์มือถือและเว็บไซต์ ของ Daydash ซึ่งรวมถึงเนื้อหา การใช้เงิน และการให้บริการทั้งหมดบน Daydash Mobile App (“แอพ”)
+      <h2>ข้อตกลงการใช้บริการแอพพลิเคชั่น TheKanko</h2>
+      <p>ข้อกำหนดและเงื่อนไขทั้งหมดในเอกสารฉบับนี้ใช้บังคับสำหรับการที่ท่านเข้าใช้แอพพลิเคชั่นทางโทรศัพท์มือถือและเว็บไซต์ ของ TheKanko ซึ่งรวมถึงเนื้อหา การใช้เงิน และการให้บริการทั้งหมดบน TheKanko Mobile App (“แอพ”)
       การใช้แอพ  สร้างบัญชีผู้ใช้งาน หรือคลิกยอมรับข้อตกลงการใช้งานของเรา จะถือว่าท่านยอมรับที่จะปฏิบัติตาม และอยู่ภายใต้ข้อตกลง รวมถึงยอมรับนโยบายการเป็นส่วนตัวที่เรากำหนด ท่านจะไม่สามารถใช้บริการแอพพลิเคชั่นของเราได้ หากท่านไม่เห็นด้วยกับข้อตกลง หรือนโยบายความเป็นส่วนตัวดังกล่าว
       ทางบริษัทขอสงวนสิทธิในการแก้ไขหรือเปลี่ยนแปลงข้อกำหนดการใช้ นโยบาย หรือคู่มือใดๆ ของแอพพลิเคชั่นตลอดเวลา ซึ่งการแก้ไขหรือเปลี่ยนแปลงดังกล่าวจะมีผลทันทีเมื่อมีการประกาศฉบับแก้ไขลงในแอพพลิเคชั่น และท่านตกลงสละสิทธิใด ๆ ที่อาจมีในการรับทราบคำบอกกล่าวเกี่ยวกับการแก้ไขเปลี่ยนแปลงดังกลาว ดังนั้น หากท่านไม่เห็นด้วยกับการแก้ไขเปลี่ยนแปลงดังกล่าว กรุณาหยุดการเข้าใช้แอพพลิเคชั่น</p>
 
       <h2>ศัพท์สำคัญ</h2>
-      <p>สินค้า คือ อีเว้นท์ หรือ กิจกรรม  หรือ แพ็คเกจการให้บริการทุกชนิดที่อยู่บน Daydash</p>
-      <p>ผู้จัด คือผู้จัดกิจกรรม หรือ อีเว้นท์  ซึ่งอาจจะเป็นบุคคล กลุ่มคน ร้านค้า หรือ บริษัท ที่ให้บริการบน Daydash และตกลงยอมรับตามข้อกำหนดของ Daydash</p>
-      <p>ผู้ซื้อ คือผู้ที่ซื้อบัตรเข้าร่วมบน Daydash และตกลงยอมรับตามข้อกำหนดของ Daydash</p>
-      <p>ผู้ใช้ คือผู้ที่เข้ามาสู่แอพพลิเคชั่นของ Daydash  และใช้บริการของ Daydash  ซึ่งรวมถึงผู้จัด และผู้ซื้อด้วย</p>
+      <p>สินค้า คือ อีเว้นท์ หรือ กิจกรรม  หรือ แพ็คเกจการให้บริการทุกชนิดที่อยู่บน TheKanko</p>
+      <p>ผู้จัด คือผู้จัดกิจกรรม หรือ อีเว้นท์  ซึ่งอาจจะเป็นบุคคล กลุ่มคน ร้านค้า หรือ บริษัท ที่ให้บริการบน TheKanko และตกลงยอมรับตามข้อกำหนดของ TheKanko</p>
+      <p>ผู้ซื้อ คือผู้ที่ซื้อบัตรเข้าร่วมบน TheKanko และตกลงยอมรับตามข้อกำหนดของ TheKanko</p>
+      <p>ผู้ใช้ คือผู้ที่เข้ามาสู่แอพพลิเคชั่นของ TheKanko  และใช้บริการของ TheKanko  ซึ่งรวมถึงผู้จัด และผู้ซื้อด้วย</p>
 
       <h2>การลงทะเบียนและบัญชีผู้ใช้งาน</h2>
       <p>บริษัทขอสงวนสิทธิให้เฉพาะผู้ใช้งานที่ลงทะเบียนเพื่อสร้างบัญชีกับแอพพลิเคชั่นของบริษัทที่จะสามารถสั่งซื้อสินค้า ใช้บริการ และร่วมทำกิจกรรมต่างๆ ที่จัดให้มีในแอพพลิเคชั่น อาทิ การสั่งซื้อสินค้า หรือการเข้าร่วมสนุกกับกิจกรรมต่างๆ เป็นต้น เมื่อท่านตกลงสร้างบัญชี ให้ถือว่าท่านตกลงดังต่อไปนี้
@@ -57,7 +57,7 @@
       </ul>
 
       <h2>ข้อกำหนดเกี่ยวกับการซื้อบัตรเข้าร่วม</h2>
-      <p>ท่านรับทราบและยอมรับว่า แอพพลิเคชั่น Daydash มีวัตถุประสงค์ที่จะให้ท่านสามารถเข้าถึงอีเว้นท์และกิจกรรมต่างๆ ได้อย่างสะดวก รวดเร็วและมีประสิทธิภาพ รวมถึงสนับสนุนกิจกรรมพาณิชย์อิเล็กทรอนิกส์ของท่านเท่านั้น บริษัทมิได้เป็นผู้จัด ผู้ขาย หรือผู้ดำเนินการใดๆ ที่เกี่ยวกับการให้บริการอีเว้นท์/กิจกรรมดังกล่าวแต่ประการใด ดังนั้น เมื่อท่านสั่งซื้อบัตรผ่านแอพพลิเคชั่นนี้ ถือว่าท่านได้ให้ความตกลงเกี่ยวกับการซื้อสินค้าดังต่อไปนี้แล้ว
+      <p>ท่านรับทราบและยอมรับว่า แอพพลิเคชั่น TheKanko มีวัตถุประสงค์ที่จะให้ท่านสามารถเข้าถึงอีเว้นท์และกิจกรรมต่างๆ ได้อย่างสะดวก รวดเร็วและมีประสิทธิภาพ รวมถึงสนับสนุนกิจกรรมพาณิชย์อิเล็กทรอนิกส์ของท่านเท่านั้น บริษัทมิได้เป็นผู้จัด ผู้ขาย หรือผู้ดำเนินการใดๆ ที่เกี่ยวกับการให้บริการอีเว้นท์/กิจกรรมดังกล่าวแต่ประการใด ดังนั้น เมื่อท่านสั่งซื้อบัตรผ่านแอพพลิเคชั่นนี้ ถือว่าท่านได้ให้ความตกลงเกี่ยวกับการซื้อสินค้าดังต่อไปนี้แล้ว
       </p>
       <ul>
         <li>การซื้อบัตร
@@ -72,7 +72,7 @@
           วิธีการชำระเงิน
           <ul>
             <li>ท่านสามารถชำระเงินค่าร่วมงานตามวิธีการที่บริษัทกำหนดทางแอพพลิเคชั่น</li>
-            <li>ท่านไม่สามารถชำระเงินให้ผู้จัดผ่านช่องทางอื่นนอกจากช่องทางที่ Daydash  ได้กำหนดให้บนแอพพลิเคชั่น</li>
+            <li>ท่านไม่สามารถชำระเงินให้ผู้จัดผ่านช่องทางอื่นนอกจากช่องทางที่ TheKanko  ได้กำหนดให้บนแอพพลิเคชั่น</li>
             <li>การชำระเงินของท่านจะสมบูรณ์ต่อเมื่อได้รับการยืนยันจากทางแอพพลิเคชั่นผ่านทางหน้าแอพพลิเคชั่นเท่านั้น </li>
           </ul>
         </li>
@@ -103,23 +103,23 @@
 
       <h2>ข้อกำหนดเกี่ยวกับการขายบัตรเข้าร่วม</h2>
       <ul>
-        <li>ข้อมูลอีเว้นท์และกิจกรรมที่แสดงอยู่บน Daydash  ถือว่าเป็นเนื้อหาที่ถูกสร้างขึ้นโดยผู้ใช้</li>
-        <li>อีเว้นท์และกิจกรรมที่ผู้จัดประกาศสามารถถูกลบทิ้งโดย Daydash ได้ หากอีเว้นท์หรือกิจกรรมดังกล่าวไม่ได้ปฏิบัติตามข้อตกลง เช่น
+        <li>ข้อมูลอีเว้นท์และกิจกรรมที่แสดงอยู่บน TheKanko  ถือว่าเป็นเนื้อหาที่ถูกสร้างขึ้นโดยผู้ใช้</li>
+        <li>อีเว้นท์และกิจกรรมที่ผู้จัดประกาศสามารถถูกลบทิ้งโดย TheKanko ได้ หากอีเว้นท์หรือกิจกรรมดังกล่าวไม่ได้ปฏิบัติตามข้อตกลง เช่น
           <ul>
             <li>อีเว้นท์และกิจกรรมที่ให้บริการที่ผิดกฎหมาย และละเมิดสิทธิของบุคคลอื่นๆ เช่น การบุกรุกเข้าสู่สถานที่ที่ไม่ได้รับอนุญาติจากบุคคลซึ่งเป็นเจ้าของ</li>
             <li>การละเมิดลิขสิทธิ์ หรือทรัพย์สินทางปัญญาของบุคคลอื่น</li>
-            <li>อีเว้นท์และกิจกรรมที่เข้าข่ายสื่อลามก หรือที่ Daydash  เห็นว่าไม่เหมาะสม</li>
-            <li>อีเว้นท์และกิจกรรมที่เป็นสแปม หรือที่ Daydash เห็นว่าไม่เหมาะสม</li>
+            <li>อีเว้นท์และกิจกรรมที่เข้าข่ายสื่อลามก หรือที่ TheKanko  เห็นว่าไม่เหมาะสม</li>
+            <li>อีเว้นท์และกิจกรรมที่เป็นสแปม หรือที่ TheKanko เห็นว่าไม่เหมาะสม</li>
             <li>อีเว้นท์และกิจกรรมที่หลอกลวงผู้ซื้อ หรือละเมิดข้อตกลงต่างๆ ของบุคคลที่สาม</li>
             <li>อีเว้นท์และกิจกรรมที่ไม่ใช่ของตนเอง</li>
-            <li>อีเว้นท์และกิจกรรมอื่นๆ ที่ Daydash เห็นว่าไม่เหมาะสม</li>
+            <li>อีเว้นท์และกิจกรรมอื่นๆ ที่ TheKanko เห็นว่าไม่เหมาะสม</li>
           </ul>
         </li>
         <li>บัญชีของผู้จัดอาจมีสิทธิ์ถูกระงับการใช้งาน หากอีเว้นท์และกิจกรรมของผู้ขายถูกลบทิ้งด้วยเหตุผลตามข้อข้างต้น</li>
         <li>อีเว้นท์และกิจกรรมที่ถูกลบออกไปด้วยเหตุผลตามข้อข้างต้น จะไม่สามารถนำกลับมาแก้ไข หรือนำกลับมาใช้ในระบบได้</li>
-        <li>ผู้จัดไม่สามารถรับชำระเงินจากผู้ซื้อผ่านช่องทางอื่นนอกจากช่องทางที่ Daydash ได้กำหนดให้บนแอพพลิเคชั่น</li>
-        <li>อีเว้นท์และกิจกรรมหรือผู้จัดที่ได้รับรีวิวที่ไม่ดีอาจไม่ถูกนำมาแสดงในระบบของ Daydash ได้</li>
-        <li>ผู้ขายไม่สามารถเพิ่มเติมรายละเอียดอีเว้นท์และกิจกรรมที่ส่งผลกระทบแก่การเปลี่ยนแปลงข้อตกลงของ Daydash ได้</li>
+        <li>ผู้จัดไม่สามารถรับชำระเงินจากผู้ซื้อผ่านช่องทางอื่นนอกจากช่องทางที่ TheKanko ได้กำหนดให้บนแอพพลิเคชั่น</li>
+        <li>อีเว้นท์และกิจกรรมหรือผู้จัดที่ได้รับรีวิวที่ไม่ดีอาจไม่ถูกนำมาแสดงในระบบของ TheKanko ได้</li>
+        <li>ผู้ขายไม่สามารถเพิ่มเติมรายละเอียดอีเว้นท์และกิจกรรมที่ส่งผลกระทบแก่การเปลี่ยนแปลงข้อตกลงของ TheKanko ได้</li>
       </ul>
 
 
@@ -127,9 +127,9 @@
       <h2>ข้อจำกัดความรับผิดของบริษัท</h2>
       <ul>
         <li>ท่านรับทราบและตกลงอย่างชัดแจ้งว่า บริษัทไม่มีความรับผิดชอบต่อความผิดพลาดของเนื้อหา (หมายถึง ข้อความ ภาพประกอบ รูปถ่าย เครื่องหมายการค้า ข้อมูล หรือ ส่วนประกอบอื่นใด) ใดๆ ในแอพพลิเคชั่น ที่อาจมีผลมาจากการไม่ใช่ข้อมูลล่าสุด หรือมีการพิมพ์ข้อมูลผิดพลาด อันเนื่องมาจากพนักงานของบริษัท หรือข้อมูลรายละเอียดที่ได้มาจากทางผู้จัดด้วย และ บริษัทขอสงวนสิทธิในการเปลี่ยนแปลงแก้ไขเนื้อหาต่าง ๆ โดยมิต้องแจ้งให้ทราบล่วงหน้า </li>
-        <li>เนื้อหา ข้อมูล สารสนเทศต่างๆ บนแอพพลิเคชั่น Daydash ไม่อยู่ในความรับผิดชอบต่อความเที่ยงตรง ความสมบูรณ์หรือประโยชน์ในการใช้งาน ของทางบริษัท ทั้งส่วนที่เกิดจากบุคคลที่สาม ผู้หนึ่งผู้ใดที่ใช้บริการ รวมทั้งความคิดเห็น และข้อแนะนำจากพนักงานที่อยู่ในความดูแลของทางบริษัทด้วย </li>
+        <li>เนื้อหา ข้อมูล สารสนเทศต่างๆ บนแอพพลิเคชั่น TheKanko ไม่อยู่ในความรับผิดชอบต่อความเที่ยงตรง ความสมบูรณ์หรือประโยชน์ในการใช้งาน ของทางบริษัท ทั้งส่วนที่เกิดจากบุคคลที่สาม ผู้หนึ่งผู้ใดที่ใช้บริการ รวมทั้งความคิดเห็น และข้อแนะนำจากพนักงานที่อยู่ในความดูแลของทางบริษัทด้วย </li>
         <li>ท่านรับทราบและตกลงอย่างชัดแจ้งว่า บริษัทไม่มีความรับผิดชอบต่อการไม่สามารถเข้าใช้บริการส่วนใดส่วนหรือหรือทั้งหมดของแอพพลิเคชั่น </li>
-        <li>ท่านตกลงรับผิดชอบถึงความเสี่ยงที่อาจเกิดขึ้นจากการการเลือกใช้เครื่องมือเพื่อรองรับการใช้บริการจากแอพพลิเคชั่น Daydash เช่น โทรศัพท์ คอมพิวเตอร์ ฮาร์ดแวร์ และอุปกรณ์ต่างๆ รวมทั้งค่าบริการ จากการใช้บริการที่เกี่ยวข้อง </li>
+        <li>ท่านตกลงรับผิดชอบถึงความเสี่ยงที่อาจเกิดขึ้นจากการการเลือกใช้เครื่องมือเพื่อรองรับการใช้บริการจากแอพพลิเคชั่น TheKanko เช่น โทรศัพท์ คอมพิวเตอร์ ฮาร์ดแวร์ และอุปกรณ์ต่างๆ รวมทั้งค่าบริการ จากการใช้บริการที่เกี่ยวข้อง </li>
         <li>สื่อและข้อมูลในแอพพลิเคชั่นอาจมีความคลาดเคลื่อนทางเทคนิคหรือสะกดคำผิด นอกจากนี้ การให้สื่อ ข้อมูล และบริการในไซต์เป็นลักษณะ "ตามสภาพ" โดยไม่มีเงื่อนไข การรับประกัน หรือข้อกำหนดลักษณะอื่นใด ดังนั้น บริษัทปฏิเสธการรับประกันและเงื่อนไขใดๆ ไม่ว่าโดยชัดแจ้งหรือโดยปริยายทั้งปวง ซึ่งรวมถึงแต่ไม่จำกัดเพียงการรับประกันโดยปริยายหรือสภาพความเหมาะสมในการใช้ประโยชน์เชิงพาณิชย์โดยปริยาย คุณภาพที่น่าพึงพอใจ ความเหมาะสมสำหรับวัตถุประสงค์หรือความต้องการในการใช้งานเฉพาะ ความถูกต้อง กรรมสิทธิ์ และการไม่ละเมิดลิขสิทธิ์อันเกี่ยวข้องกับแอพพลิเคชั่นและข้อมูล เนื้อหา และสื่อที่อยู่ในแอพพลิเคชั่น หรือการใช้แอพพลิเคชั่นจะไม่เกิดการหยุดชะงักหรือการใช้แอพพลิเคชั่นจะเป็นไปตามกฎหมายที่ใช้บังคับกับท่าน หรือการส่งข้อมูลเกี่ยวกับท่านอันเกี่ยวข้องกับแอพพลิเคชั่นจะสำเร็จ ถูกต้อง หรือส่งอย่างปลอดภัย ทั้งนี้ ข้อปฏิเสธดังกล่าวข้างต้นจะเป็นไปตามเท่าที่กฎหมายอนุญาตให้สามารถกระทำได้ </li>
         <li>เท่าที่กฎหมายที่เกี่ยวข้องจะอนุญาตไว้ บริษัท และเจ้าหน้าที่ กรรมการ พนักงาน ผู้ถือหุ้น หรือตัวแทนของบริษัท จะไม่มีความรับผิดสำหรับค่าเสียหายทางตรง ทางอ้อม ค่าเสียหายที่เป็นการลงโทษ หรือที่เป็นผลสืบเนื่อง หรือค่าเสียหายอื่นใดในประเภทใดก็ตาม ซึ่งรวมถึงแต่ไม่จำกัดเพียงการสูญเสียรายได้ กำไร ค่าความนิยม ข้อมูล สัญญา การใช้เงิน หรือการสูญเสียหรือเสียหายอันเนื่องมาจากหรือที่เกี่ยวข้องในทางใดก็ตามกับการหยุดชะงักของธุรกิจ ไม่ว่าในการละเมิด (ซึ่งรวมถึงแต่ไม่จำกัดเพียงความประมาทเลินเล่อ) สัญญา หรือโดยประการอื่น อันเป็นผลมาจาก หรือที่เกี่ยวข้องกับการใช้หรือการไม่สามารถใช้แอพพลิเคชั่น เนื้อหา หรือสื่อที่อยู่ในแอพพลิเคชั่นหรือเข้าถึงผ่านแอพพลิเคชั่น รวมถึงแต่ไม่จำกัดเพียงค่าเสียหายใดๆ ที่เป็นผลมาจากหรือเกี่ยวข้องกับการที่ผู้ใช้เชื่อถือข้อมูลใดที่ได้รับจากแอพพลิเคชั่น หรือจากทางผู้จัด หรือที่เป็นผลมาจากความผิดพลาด การละเว้น การหยุดชะงัก การลบไฟล์หรืออีเมล ข้อผิดพลาด ความบกพร่อง ไวรัส ความล่าช้าในการดำเนินการหรือการส่ง หรือการไม่สามารถปฏิบัติสิ่งใด ไม่ว่าจะเป็นผลมาจากปรากฏการณ์ธรรมชาติ ความล้มเหลวในการสื่อสาร การโจรกรรม การทำลาย หรือการเข้าถึงโดยไม่ได้รับอนุญาต ซึ่งบันทึก โปรแกรม หรือบริการของบริษัท</li>
       </ul>
@@ -140,13 +140,13 @@
       <h2>ข้อกำหนดเกี่ยวกับสิทธิในทรัพย์สินทางปัญญา</h2>
       <ul>
         <li>เนื้อหาทั้งหมดที่แสดงในแอพพลิเคชั่นอยู่ภายใต้กฎหมายเกี่ยวกับทรัพย์สินทางปัญญาทั้งหมด โดยมีบริษัท หรือ บุคคลที่สามซึ่งอนุญาตให้บริษัทใช้ เป็นเจ้าของทรัพย์สินทางปัญญา ท่านสามารถใช้เนื้อหาเหล่านั้นประกอบการใช้งานแอพพลิเคชั่นเท่านั้น ห้ามมิให้มีการทำซ้ำ เนื้อหาเหล่านั้น เพื่อใช้งานในวัตถุประสงค์อื่นๆ</li>
-        <li>บริษัทสงวนสิทธิในทรัพย์สินทางปัญญาทั้งหมดโดยชัดแจ้งในต้นฉบับทั้งหมดของ Daydash ในด้านเนื้อหา สัญลักษณ์ ตัวอักษร กราฟฟิก การออกแบบ และข้อมูลทั้งหมด โดยท่านตกลงไม่ทำซ้ำ ดาวน์โหลด จัดจำหน่าย เผยแพร่ ส่วนหนึ่งส่วนใดของแอพพลิเคชั่น นอกเหนือจากการใช้งานส่วนบุคคล ห้ามลอกเลียน ส่วนหนึ่งส่วนใดของแอพพลิเคชั่นนี้ไม่ว่ารูปแบบใดๆ นอกจากจะได้รับอนุญาตเป็นลายลักษณ์อักษรจากทางบริษัท ทางบริษัทจะไม่รับผิดชอบเกี่ยวกับความผิดพลาดด้านเนื้อหาที่เกิดขึ้น จากการละเมิดลิขสิทธิ์ หรือความเสียหายอันเกิดจากการใช้งานขอผู้ใช้บริการ ในกรณีใดๆ ทั้งสิ้น</li>
-        <li>ห้ามมิให้ผู้ใช้บริการอัพโหลด เพื่อทำการเปลี่ยนแปลงแก้ไขข้อมูล หรือส่วนต่างๆบนแอพพลิเคชั่น Daydash โดยไม่ได้รับอนุญาตเป็นลายลักษณ์อักษรจากทางบริษัท ผู้ฝ่าฝืนต้องรับผิดชอบต่อการกระทำดังกล่าวข้อมูล และสารสนเทศต่างๆ ที่เผยแพร่ผ่านทางแอพพลิเคชั่น Daydash ถือเป็นกรรมสิทธิ์ของบริษัท ตลอดไป โดยไม่สามารถเรียกร้องเอาคืนด้วยเหตุผล, ข้อยกเว้น หรือยกข้อกฎหมายใดมากล่าวอ้างได้ โดยบริษัทฯ สามารถทำการใดๆต่อข้อมูล และสารสนเทศดังกล่าวได้ ผู้ใช้บริการยอมรับให้ทางบริษัทฯ มีสิทธิ์ในการแก้ไข, ปรับปรุง, ทำซ้ำ, เผยแพร่, จำหน่าย ข้อมูล และสารสนเทศต่างๆ ที่อยู่บนแอพพลิเคชั่น Daydash ที่เป็นของผู้ใช้บริการได้ </li>
+        <li>บริษัทสงวนสิทธิในทรัพย์สินทางปัญญาทั้งหมดโดยชัดแจ้งในต้นฉบับทั้งหมดของ TheKanko ในด้านเนื้อหา สัญลักษณ์ ตัวอักษร กราฟฟิก การออกแบบ และข้อมูลทั้งหมด โดยท่านตกลงไม่ทำซ้ำ ดาวน์โหลด จัดจำหน่าย เผยแพร่ ส่วนหนึ่งส่วนใดของแอพพลิเคชั่น นอกเหนือจากการใช้งานส่วนบุคคล ห้ามลอกเลียน ส่วนหนึ่งส่วนใดของแอพพลิเคชั่นนี้ไม่ว่ารูปแบบใดๆ นอกจากจะได้รับอนุญาตเป็นลายลักษณ์อักษรจากทางบริษัท ทางบริษัทจะไม่รับผิดชอบเกี่ยวกับความผิดพลาดด้านเนื้อหาที่เกิดขึ้น จากการละเมิดลิขสิทธิ์ หรือความเสียหายอันเกิดจากการใช้งานขอผู้ใช้บริการ ในกรณีใดๆ ทั้งสิ้น</li>
+        <li>ห้ามมิให้ผู้ใช้บริการอัพโหลด เพื่อทำการเปลี่ยนแปลงแก้ไขข้อมูล หรือส่วนต่างๆบนแอพพลิเคชั่น TheKanko โดยไม่ได้รับอนุญาตเป็นลายลักษณ์อักษรจากทางบริษัท ผู้ฝ่าฝืนต้องรับผิดชอบต่อการกระทำดังกล่าวข้อมูล และสารสนเทศต่างๆ ที่เผยแพร่ผ่านทางแอพพลิเคชั่น TheKanko ถือเป็นกรรมสิทธิ์ของบริษัท ตลอดไป โดยไม่สามารถเรียกร้องเอาคืนด้วยเหตุผล, ข้อยกเว้น หรือยกข้อกฎหมายใดมากล่าวอ้างได้ โดยบริษัทฯ สามารถทำการใดๆต่อข้อมูล และสารสนเทศดังกล่าวได้ ผู้ใช้บริการยอมรับให้ทางบริษัทฯ มีสิทธิ์ในการแก้ไข, ปรับปรุง, ทำซ้ำ, เผยแพร่, จำหน่าย ข้อมูล และสารสนเทศต่างๆ ที่อยู่บนแอพพลิเคชั่น TheKanko ที่เป็นของผู้ใช้บริการได้ </li>
       </ul>
       <h2>การดำเนินการเชื่อมโยงแอพพลิเคชั่น</h2>
       <ul>
-        <li>ท่านรับทราบและตกลงอย่างชัดแจ้งว่า ในกรณีที่มีการดำเนินการเชื่อมโยงจากแอพพลิเคชั่นอื่นใดมายังแอพพลิเคชั่น Daydash เพื่อประโยชน์ทางการค้าหรือไม่ บริษัทไม่มีส่วนเกี่ยวข้องกับการเชื่อมโยงแอพพลิเคชั่นดังกล่าว และจะไม่รับผิดชอบต่อความผิดพลาดใดๆ หรือความเสียหาย ซึ่งอาจเกิดขึ้นจากการเข้าใช้งานแอพพลิเคชั่นผ่านทางการเชื่อมโยงผ่านจากแอพพลิเคชั่นอื่น ไม่ว่าในกรณีใดๆ</li>
-        <li>แอพพลิเคชั่น Daydash มีจุดเชื่อมโยงข้อมูลไปยังแอพพลิเคชั่นอื่นที่ไม่ได้อยู่ในความดูแลของบริษัท ดังนั้น บริษัทขอปฏิเสธความผิดชอบต่อผลอันใดที่เกิดขึ้นจากข้อมูลหรือกิจกรรมในแอพพลิเคชั่นเหล่านั้นทั้งทางตรงและทางอ้อม</li>
+        <li>ท่านรับทราบและตกลงอย่างชัดแจ้งว่า ในกรณีที่มีการดำเนินการเชื่อมโยงจากแอพพลิเคชั่นอื่นใดมายังแอพพลิเคชั่น TheKanko เพื่อประโยชน์ทางการค้าหรือไม่ บริษัทไม่มีส่วนเกี่ยวข้องกับการเชื่อมโยงแอพพลิเคชั่นดังกล่าว และจะไม่รับผิดชอบต่อความผิดพลาดใดๆ หรือความเสียหาย ซึ่งอาจเกิดขึ้นจากการเข้าใช้งานแอพพลิเคชั่นผ่านทางการเชื่อมโยงผ่านจากแอพพลิเคชั่นอื่น ไม่ว่าในกรณีใดๆ</li>
+        <li>แอพพลิเคชั่น TheKanko มีจุดเชื่อมโยงข้อมูลไปยังแอพพลิเคชั่นอื่นที่ไม่ได้อยู่ในความดูแลของบริษัท ดังนั้น บริษัทขอปฏิเสธความผิดชอบต่อผลอันใดที่เกิดขึ้นจากข้อมูลหรือกิจกรรมในแอพพลิเคชั่นเหล่านั้นทั้งทางตรงและทางอ้อม</li>
       </ul>
       <h2>การระงับ แก้ไข ปรับเปลี่ยน แอพพลิเคชั่น</h2>
       <ul>
