--- a/app/views/partials/_manage_nav.html.erb
+++ b/app/views/partials/_manage_nav.html.erb
@@ -5,9 +5,9 @@
         <h3 class="event-title" style="margin-top: 0px;">
           <%= @event.title %>
           <% if @event.uptime > Time.zone.now %>
-            <%= @event.status == 'published' ? '<div class="btn btn-daydash-status btn-daydash-live">Live</div>'.html_safe : '<div class="btn btn-daydash-status btn-daydash-draft">Draft</div>'.html_safe %>
+            <%= @event.status == 'published' ? '<div class="btn btn-thekanko-status btn-thekanko-live">Live</div>'.html_safe : '<div class="btn btn-thekanko-status btn-thekanko-draft">Draft</div>'.html_safe %>
           <% else %>
-            <div class="btn btn-daydash-status btn-daydash-past">Past</div>
+            <div class="btn btn-thekanko-status btn-thekanko-past">Past</div>
           <% end %>
         </h3>
         <p><%= @event.to_uptime %> at <%= @event.location_name %></p>
@@ -15,12 +15,12 @@
       <div class="col-xs-12 col-sm-12 col-md-4 col-lg-3 text-right">
         <div class="row">
           <div class="col-xs-6">
-            <%= link_to edit_organizer_event_path(@event), class: 'btn btn-daydash-grey-1 col-xs-12' do %>
+            <%= link_to edit_organizer_event_path(@event), class: 'btn btn-thekanko-grey-1 col-xs-12' do %>
               <i class="nc-icon-outline design_pen-01"></i> Edit
             <% end %>
           </div>
           <div class="col-xs-6">
-            <%= link_to client_event_path(@event),         class: 'btn btn-daydash-grey-1 col-xs-12' do %>
+            <%= link_to client_event_path(@event),         class: 'btn btn-thekanko-grey-1 col-xs-12' do %>
               <i class="nc-icon-outline ui-1_eye-17"></i> View Event
             <% end %>
           </div>
@@ -28,7 +28,7 @@
       </div>
     </div>
 
-    <ul class="nav nav-pills nav-daydash" id="<%= current_user.can_organizer? ? 'organizer-nav' : 'profile-nav' %>">
+    <ul class="nav nav-pills nav-thekanko" id="<%= current_user.can_organizer? ? 'organizer-nav' : 'profile-nav' %>">
       <%= organizer_nav_link "Dashboard", dashboard_organizer_event_path(@event), 'organizer-event-nav-dashboard', 'nc-icon-outline ui-1_home-minimal' %>
       <%= organizer_nav_link "Orders", orders_organizer_event_path(@event), 'organizer-event-nav-orders', 'nc-icon-outline files_folder-money' %>
       <%= organizer_nav_link "Attendees", attendees_organizer_event_path(@event), 'organizer-event-nav-attendees', 'nc-icon-outline users_multiple-19' %>
