--- a/app/views/user/registrations/new.html.erb
+++ b/app/views/user/registrations/new.html.erb
@@ -43,7 +43,7 @@
           </div>
 
           <div class="form-group">
-            <button class="btn btn-daydash btn-daydash-green-2 btn-block" type="submit">Sign up</button>
+            <button class="btn btn-thekanko btn-thekanko-green-2 btn-block" type="submit">Sign up</button>
           </div>
 
           <div class="form-group">
